Fixes jumping content on scroll, scales logo and sticky header

--- a/src/onegov/town6/theme/styles/header.scss
+++ b/src/onegov/town6/theme/styles/header.scss
@@ -173,6 +173,7 @@ $pdf-icon: '\f1c1';
 }
 
 $navbar-shadow: 0 15px 10px -15px rgba(10, 10, 10, .25);
+$transition-duration: .1s;
 
 #nav-bar {
 
@@ -180,6 +181,12 @@ $navbar-shadow: 0 15px 10px -15px rgba(10, 10, 10, .25);
     z-index: 999;
 
     .navigation {
+
+        &.shrink .cell {
+            padding-bottom: 0;
+            padding-top: 0;
+        }
+
         .cell {
 
             @include breakpoint(small only) {
@@ -214,11 +221,17 @@ $navbar-shadow: 0 15px 10px -15px rgba(10, 10, 10, .25);
     img {
         height: 6em;
         object-fit: contain;
+        transition: all $transition-duration ease;
 
         @include breakpoint(small only) {
             transform: scale(.8);
         }
 
+        @include breakpoint(medium up) {
+            &.scaled {
+                transform: scale(.9);
+            }
+        }
     }
 
     i {
